[gd_scene load_steps=21 format=2]

[ext_resource path="res://cris/Assets/FloorTiles.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Dice/Dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cell/Cell.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Skybox/Epic_BlueSunset_EquiRect_flat.png" type="Texture" id=6]
[ext_resource path="res://cris/Assets/9.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameManager/GameManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/PlayerTurnHUD/PlayerTurnHUD.gd" type="Script" id=9]
[ext_resource path="res://cris/Assets/cafeBuilding.tscn" type="PackedScene" id=10]
[ext_resource path="res://cris/Assets/shop.tscn" type="PackedScene" id=11]
[ext_resource path="res://cris/Assets/10.tscn" type="PackedScene" id=12]
[ext_resource path="res://cris/Assets/11.tscn" type="PackedScene" id=13]
[ext_resource path="res://SceneLoader/SceneTransitionAnim.tscn" type="PackedScene" id=16]
[ext_resource path="res://GridMaps/grass_grid.tres" type="MeshLibrary" id=18]
[ext_resource path="res://UI/PlayerTurnHUD/PlayerTurnHUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://SceneLoader/SceneLoader.tscn" type="PackedScene" id=20]
[ext_resource path="res://SavingSystem/MinigamesLoader/MinigamesLoader.tscn" type="PackedScene" id=21]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 6 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
fog_color = Color( 0.0235294, 0.25098, 0.478431, 1 )

[node name="Map1" type="Spatial"]

[node name="SceneLoader" parent="." instance=ExtResource( 20 )]
next_scene_path = "res://UI/Credits/Credits.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dado" parent="CanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 30, 30 )

[node name="PlayerTurnHUD" parent="CanvasLayer" instance=ExtResource( 19 )]
margin_left = -120.0
margin_top = 25.0
margin_right = -25.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_vertical = 5
script = ExtResource( 9 )

[node name="SceneTransitionAnim" parent="." instance=ExtResource( 16 )]

[node name="Control" parent="SceneTransitionAnim" index="0"]
mouse_filter = 2

[node name="ColorRect" parent="SceneTransitionAnim/Control" index="0"]
mouse_filter = 2

[node name="TopViewCam" type="Camera" parent="."]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 48, -25 )
size = 178.12
near = 0.01
far = 8192.0

[node name="MainCam" type="Camera" parent="."]
transform = Transform( 0.0348937, -0.563966, 0.82506, 0, 0.825563, 0.56431, -0.999391, -0.0196909, 0.028807, 40.5, 21.726, -35.813 )
visible = false

[node name="Env" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Env"]
environment = SubResource( 2 )

[node name="Street" type="GridMap" parent="Env"]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 2, 1.05, 2 )
data = {
"cells": PoolIntArray( 1, 0, 6, 2, 0, 6, 3, 0, 6, 0, 65494, 6, 2, 65494, 0, 4, 65494, 6, 65532, 65494, 6, 65534, 65494, 6, 65535, 65494, 6, 0, 65495, 6, 1, 65495, 6, 2, 65495, 0, 4, 65495, 6, 65532, 65495, 6, 65533, 65495, 6, 65534, 65495, 6, 65535, 65495, 6, 0, 65496, 6, 1, 65496, 6, 2, 65496, 0, 4, 65496, 6, 65530, 65496, 6, 65532, 65496, 6, 65534, 65496, 6, 65535, 65496, 6, 0, 65497, 6, 1, 65497, 6, 2, 65497, 0, 4, 65497, 6, 65530, 65497, 6, 65531, 65497, 6, 65532, 65497, 6, 65533, 65497, 6, 65534, 65497, 6, 65535, 65497, 6, 0, 65498, 6, 1, 65498, 6, 2, 65498, 0, 4, 65498, 6, 65530, 65498, 6, 65531, 65498, 6, 65532, 65498, 6, 65533, 65498, 6, 65534, 65498, 6, 65535, 65498, 6, 0, 65499, 6, 1, 65499, 6, 2, 65499, 0, 4, 65499, 6, 65530, 65499, 6, 65531, 65499, 6, 65532, 65499, 6, 0, 65500, 6, 1, 65500, 6, 2, 65500, 0, 4, 65500, 6, 65529, 65500, 6, 65530, 65500, 6, 65531, 65500, 6, 65532, 65500, 6, 65533, 65500, 6, 65535, 65500, 6, 1, 65501, 6, 2, 65501, 0, 4, 65501, 6, 65529, 65501, 6, 65530, 65501, 6, 65532, 65501, 6, 65533, 65501, 6, 65535, 65501, 6, 0, 65502, 6, 1, 65502, 6, 2, 65502, 0, 4, 65502, 6, 65531, 65502, 6, 65532, 65502, 6, 65533, 65502, 6, 65534, 65502, 6, 65535, 65502, 6, 0, 65503, 6, 1, 65503, 6, 2, 65503, 0, 4, 65503, 6, 65531, 65503, 6, 65532, 65503, 6, 65533, 65503, 6, 65534, 65503, 6, 65535, 65503, 6, 0, 65504, 6, 1, 65504, 6, 2, 65504, 0, 4, 65504, 6, 65531, 65504, 6, 65532, 65504, 6, 65533, 65504, 6, 65534, 65504, 6, 65535, 65504, 6, 0, 65505, 6, 1, 65505, 6, 2, 65505, 0, 4, 65505, 6, 65531, 65505, 6, 65532, 65505, 6, 65533, 65505, 6, 65534, 65505, 6, 65535, 65505, 6, 0, 65506, 6, 1, 65506, 6, 2, 65506, 0, 4, 65506, 6, 65530, 65506, 6, 65531, 65506, 6, 65532, 65506, 6, 65533, 65506, 6, 65534, 65506, 6, 65535, 65506, 6, 0, 65507, 6, 1, 65507, 6, 2, 65507, 0, 4, 65507, 6, 65530, 65507, 6, 65531, 65507, 6, 65532, 65507, 6, 65533, 65507, 6, 65534, 65507, 6, 65535, 65507, 6, 0, 65508, 6, 1, 65508, 6, 2, 65508, 0, 4, 65508, 6, 65530, 65508, 6, 65531, 65508, 6, 65532, 65508, 6, 65533, 65508, 6, 65534, 65508, 6, 65535, 65508, 6, 0, 65509, 6, 1, 65509, 6, 2, 65509, 0, 4, 65509, 6, 65530, 65509, 6, 65531, 65509, 6, 65532, 65509, 6, 65533, 65509, 6, 65534, 65509, 6, 65535, 65509, 6, 0, 65510, 6, 1, 65510, 6, 2, 65510, 0, 4, 65510, 6, 65530, 65510, 6, 65531, 65510, 6, 65532, 65510, 6, 65533, 65510, 6, 65534, 65510, 6, 65535, 65510, 6, 0, 65511, 6, 1, 65511, 6, 2, 65511, 0, 4, 65511, 6, 65530, 65511, 6, 65531, 65511, 6, 65532, 65511, 6, 65533, 65511, 6, 65534, 65511, 6, 65535, 65511, 6, 0, 65512, 6, 1, 65512, 6, 2, 65512, 0, 4, 65512, 6, 65530, 65512, 6, 65531, 65512, 6, 65532, 65512, 6, 65533, 65512, 6, 65534, 65512, 6, 65535, 65512, 6, 0, 65513, 6, 1, 65513, 6, 2, 65513, 0, 4, 65513, 6, 65530, 65513, 6, 65531, 65513, 6, 65532, 65513, 6, 65533, 65513, 6, 65534, 65513, 6, 65535, 65513, 6, 0, 65514, 6, 1, 65514, 6, 2, 65514, 0, 4, 65514, 6, 65529, 65514, 6, 65530, 65514, 6, 65531, 65514, 6, 65532, 65514, 6, 65533, 65514, 6, 65534, 65514, 6, 65535, 65514, 6, 0, 65515, 6, 1, 65515, 6, 2, 65515, 0, 4, 65515, 6, 65530, 65515, 6, 65531, 65515, 6, 65532, 65515, 6, 65533, 65515, 6, 65534, 65515, 6, 65535, 65515, 6, 0, 65516, 6, 1, 65516, 6, 2, 65516, 0, 4, 65516, 6, 65530, 65516, 6, 65531, 65516, 6, 65532, 65516, 6, 65533, 65516, 6, 65534, 65516, 6, 65535, 65516, 6, 0, 65517, 6, 1, 65517, 6, 2, 65517, 0, 4, 65517, 6, 65530, 65517, 6, 65531, 65517, 6, 65532, 65517, 6, 65533, 65517, 6, 65534, 65517, 6, 65535, 65517, 6, 0, 65518, 6, 1, 65518, 6, 2, 65518, 0, 4, 65518, 6, 65530, 65518, 6, 65531, 65518, 6, 65532, 65518, 6, 65533, 65518, 6, 65534, 65518, 6, 65535, 65518, 6, 0, 65519, 6, 1, 65519, 6, 2, 65519, 0, 4, 65519, 6, 65531, 65519, 6, 65532, 65519, 6, 65533, 65519, 6, 65534, 65519, 6, 65535, 65519, 6, 0, 65520, 6, 1, 65520, 6, 2, 65520, 0, 4, 65520, 6, 65531, 65520, 6, 65532, 65520, 6, 65533, 65520, 6, 65534, 65520, 6, 65535, 65520, 6, 0, 65521, 6, 1, 65521, 6, 2, 65521, 0, 4, 65521, 6, 65531, 65521, 6, 65532, 65521, 6, 65533, 65521, 6, 65534, 65521, 6, 65535, 65521, 6, 0, 65522, 6, 1, 65522, 6, 2, 65522, 0, 4, 65522, 6, 65531, 65522, 6, 65532, 65522, 6, 65533, 65522, 6, 65534, 65522, 6, 65535, 65522, 6, 0, 65523, 6, 1, 65523, 6, 2, 65523, 0, 4, 65523, 6, 65531, 65523, 6, 65532, 65523, 6, 65533, 65523, 6, 65534, 65523, 6, 65535, 65523, 6, 0, 65524, 6, 1, 65524, 6, 2, 65524, 0, 4, 65524, 6, 65531, 65524, 6, 65532, 65524, 6, 65533, 65524, 6, 65534, 65524, 6, 65535, 65524, 6, 0, 65525, 6, 1, 65525, 6, 2, 65525, 0, 4, 65525, 6, 65531, 65525, 6, 65532, 65525, 6, 65533, 65525, 6, 65534, 65525, 6, 65535, 65525, 6, 0, 65526, 6, 1, 65526, 6, 2, 65526, 0, 4, 65526, 6, 65531, 65526, 6, 65532, 65526, 6, 65533, 65526, 6, 65534, 65526, 6, 65535, 65526, 6, 1, 65527, 6, 2, 65527, 0, 4, 65527, 6, 65531, 65527, 6, 65532, 65527, 6, 65533, 65527, 6, 65534, 65527, 6, 65535, 65527, 6, 1, 65528, 6, 2, 65528, 0, 4, 65528, 6, 65531, 65528, 6, 65532, 65528, 6, 65533, 65528, 6, 65534, 65528, 6, 65535, 65528, 6, 0, 65529, 6, 1, 65529, 6, 2, 65529, 0, 4, 65529, 6, 65531, 65529, 6, 65532, 65529, 6, 65533, 65529, 6, 65534, 65529, 6, 65535, 65529, 6, 0, 65530, 6, 1, 65530, 6, 2, 65530, 0, 4, 65530, 6, 65531, 65530, 6, 65532, 65530, 6, 65533, 65530, 6, 65534, 65530, 6, 65535, 65530, 6, 0, 65531, 6, 1, 65531, 6, 2, 65531, 0, 4, 65531, 6, 65531, 65531, 6, 65532, 65531, 6, 65533, 65531, 6, 65534, 65531, 6, 65535, 65531, 6, 0, 65532, 6, 1, 65532, 6, 2, 65532, 0, 4, 65532, 6, 65531, 65532, 6, 65532, 65532, 6, 65533, 65532, 6, 65534, 65532, 6, 65535, 65532, 6, 0, 65533, 6, 1, 65533, 6, 2, 65533, 0, 4, 65533, 6, 65531, 65533, 6, 65532, 65533, 6, 65533, 65533, 6, 65534, 65533, 6, 65535, 65533, 6, 0, 65534, 6, 1, 65534, 6, 2, 65534, 0, 4, 65534, 6, 65531, 65534, 6, 65532, 65534, 6, 65533, 65534, 6, 65534, 65534, 6, 65535, 65534, 6, 1, 65535, 6, 2, 65535, 6, 3, 65535, 6, 65532, 65535, 6, 65533, 65535, 6, 65534, 65535, 6, 65535, 65535, 6 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="GridMap" type="GridMap" parent="Env"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.08, 0 )
mesh_library = ExtResource( 18 )
cell_size = Vector3( 2, 0.5, 2 )
data = {
"cells": PoolIntArray( 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 4, 65495, 2, 5, 65495, 2, 6, 65495, 2, 7, 65495, 2, 4, 65496, 2, 5, 65496, 2, 6, 65496, 2, 7, 65496, 2, 8, 65496, 2, 9, 65496, 2, 10, 65496, 2, 11, 65496, 2, 3, 65497, 2, 4, 65497, 2, 5, 65497, 2, 6, 65497, 2, 7, 65497, 2, 8, 65497, 2, 9, 65497, 2, 10, 65497, 2, 11, 65497, 2, 4, 65498, 2, 5, 65498, 2, 6, 65498, 2, 7, 65498, 2, 8, 65498, 2, 9, 65498, 2, 10, 65498, 2, 11, 65498, 2, 4, 65499, 2, 5, 65499, 2, 6, 65499, 2, 7, 65499, 2, 8, 65499, 2, 9, 65499, 2, 10, 65499, 2, 11, 65499, 2, 3, 65500, 2, 4, 65500, 2, 5, 65500, 2, 6, 65500, 2, 7, 65500, 2, 8, 65500, 2, 9, 65500, 2, 10, 65500, 2, 11, 65500, 2, 4, 65501, 2, 5, 65501, 2, 6, 65501, 2, 7, 65501, 2, 8, 65501, 2, 9, 65501, 2, 10, 65501, 2, 11, 65501, 2, 3, 65502, 2, 4, 65502, 2, 5, 65502, 2, 6, 65502, 2, 7, 65502, 2, 8, 65502, 2, 9, 65502, 2, 10, 65502, 2, 11, 65502, 2, 3, 65503, 2, 4, 65503, 2, 5, 65503, 2, 6, 65503, 2, 7, 65503, 2, 8, 65503, 2, 9, 65503, 2, 10, 65503, 2, 11, 65503, 2, 3, 65504, 2, 4, 65504, 2, 5, 65504, 2, 6, 65504, 2, 7, 65504, 2, 8, 65504, 2, 9, 65504, 2, 10, 65504, 2, 11, 65504, 2, 3, 65505, 2, 4, 65505, 2, 5, 65505, 2, 6, 65505, 2, 7, 65505, 2, 8, 65505, 2, 9, 65505, 2, 10, 65505, 2, 11, 65505, 2, 3, 65506, 2, 4, 65506, 2, 5, 65506, 2, 6, 65506, 2, 7, 65506, 2, 8, 65506, 2, 9, 65506, 2, 10, 65506, 2, 11, 65506, 2, 3, 65507, 2, 4, 65507, 2, 5, 65507, 2, 6, 65507, 2, 7, 65507, 2, 8, 65507, 2, 9, 65507, 2, 10, 65507, 2, 11, 65507, 2, 3, 65508, 2, 4, 65508, 2, 5, 65508, 2, 6, 65508, 2, 7, 65508, 2, 8, 65508, 2, 9, 65508, 2, 10, 65508, 2, 11, 65508, 2, 3, 65509, 2, 4, 65509, 2, 5, 65509, 2, 6, 65509, 2, 7, 65509, 2, 8, 65509, 2, 9, 65509, 2, 10, 65509, 2, 11, 65509, 2, 3, 65510, 2, 4, 65510, 2, 5, 65510, 2, 6, 65510, 2, 7, 65510, 2, 8, 65510, 2, 9, 65510, 2, 10, 65510, 2, 11, 65510, 2, 3, 65511, 2, 4, 65511, 2, 5, 65511, 2, 6, 65511, 2, 7, 65511, 2, 8, 65511, 2, 9, 65511, 2, 10, 65511, 2, 11, 65511, 2, 3, 65512, 2, 4, 65512, 2, 5, 65512, 2, 6, 65512, 2, 7, 65512, 2, 8, 65512, 2, 9, 65512, 2, 10, 65512, 2, 11, 65512, 2, 3, 65513, 2, 4, 65513, 2, 5, 65513, 2, 6, 65513, 2, 7, 65513, 2, 8, 65513, 2, 9, 65513, 2, 10, 65513, 2, 11, 65513, 2, 3, 65514, 2, 4, 65514, 2, 5, 65514, 2, 6, 65514, 2, 7, 65514, 2, 8, 65514, 2, 9, 65514, 2, 10, 65514, 2, 11, 65514, 2, 3, 65515, 2, 4, 65515, 2, 5, 65515, 2, 6, 65515, 2, 7, 65515, 2, 8, 65515, 2, 9, 65515, 2, 10, 65515, 2, 11, 65515, 2, 3, 65516, 2, 4, 65516, 2, 5, 65516, 2, 6, 65516, 2, 7, 65516, 2, 8, 65516, 2, 9, 65516, 2, 10, 65516, 2, 11, 65516, 2, 3, 65517, 2, 4, 65517, 2, 5, 65517, 2, 6, 65517, 2, 7, 65517, 2, 8, 65517, 2, 9, 65517, 2, 10, 65517, 2, 11, 65517, 2, 3, 65518, 2, 4, 65518, 2, 5, 65518, 2, 6, 65518, 2, 7, 65518, 2, 8, 65518, 2, 9, 65518, 2, 10, 65518, 2, 11, 65518, 2, 3, 65519, 2, 4, 65519, 2, 5, 65519, 2, 6, 65519, 2, 7, 65519, 2, 8, 65519, 2, 9, 65519, 2, 10, 65519, 2, 11, 65519, 2, 3, 65520, 2, 4, 65520, 2, 5, 65520, 2, 6, 65520, 2, 7, 65520, 2, 8, 65520, 2, 9, 65520, 2, 10, 65520, 2, 11, 65520, 2, 3, 65521, 2, 4, 65521, 2, 5, 65521, 2, 6, 65521, 2, 7, 65521, 2, 8, 65521, 2, 9, 65521, 2, 10, 65521, 2, 11, 65521, 2, 3, 65522, 2, 4, 65522, 2, 5, 65522, 2, 6, 65522, 2, 7, 65522, 2, 8, 65522, 2, 9, 65522, 2, 10, 65522, 2, 11, 65522, 2, 3, 65523, 2, 4, 65523, 2, 5, 65523, 2, 6, 65523, 2, 7, 65523, 2, 8, 65523, 2, 9, 65523, 2, 10, 65523, 2, 11, 65523, 2, 3, 65524, 2, 4, 65524, 2, 5, 65524, 2, 6, 65524, 2, 7, 65524, 2, 8, 65524, 2, 9, 65524, 2, 10, 65524, 2, 11, 65524, 2, 3, 65525, 2, 4, 65525, 2, 5, 65525, 2, 6, 65525, 2, 7, 65525, 2, 8, 65525, 2, 9, 65525, 2, 10, 65525, 2, 11, 65525, 2, 3, 65526, 2, 4, 65526, 2, 5, 65526, 2, 6, 65526, 2, 7, 65526, 2, 8, 65526, 2, 9, 65526, 2, 10, 65526, 2, 11, 65526, 2, 3, 65527, 2, 4, 65527, 2, 5, 65527, 2, 6, 65527, 2, 7, 65527, 2, 8, 65527, 2, 9, 65527, 2, 10, 65527, 2, 11, 65527, 2, 3, 65528, 2, 4, 65528, 2, 5, 65528, 2, 6, 65528, 2, 7, 65528, 2, 8, 65528, 2, 9, 65528, 2, 10, 65528, 2, 11, 65528, 2, 3, 65529, 2, 4, 65529, 2, 5, 65529, 2, 6, 65529, 2, 7, 65529, 2, 8, 65529, 2, 9, 65529, 2, 10, 65529, 2, 11, 65529, 2, 3, 65530, 2, 4, 65530, 2, 5, 65530, 2, 6, 65530, 2, 7, 65530, 2, 8, 65530, 2, 9, 65530, 2, 10, 65530, 2, 11, 65530, 2, 3, 65531, 2, 4, 65531, 2, 5, 65531, 2, 6, 65531, 2, 7, 65531, 2, 8, 65531, 2, 9, 65531, 2, 10, 65531, 2, 11, 65531, 2, 3, 65532, 2, 4, 65532, 2, 5, 65532, 2, 6, 65532, 2, 7, 65532, 2, 8, 65532, 2, 9, 65532, 2, 10, 65532, 2, 11, 65532, 2, 3, 65533, 2, 4, 65533, 2, 5, 65533, 2, 6, 65533, 2, 7, 65533, 2, 8, 65533, 2, 9, 65533, 2, 10, 65533, 2, 11, 65533, 2, 3, 65534, 2, 4, 65534, 2, 5, 65534, 2, 6, 65534, 2, 7, 65534, 2, 8, 65534, 2, 9, 65534, 2, 10, 65534, 2, 11, 65534, 2, 3, 65535, 2, 4, 65535, 2, 5, 65535, 2, 6, 65535, 2, 7, 65535, 2, 8, 65535, 2, 9, 65535, 2, 10, 65535, 2, 11, 65535, 2 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Spawners" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9235, 0, -5.47017 )

[node name="Player2" parent="Spawners" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.42828, 0.902338, 6.5 )
collision_layer = 2
script = ExtResource( 3 )
player_num = 2
GameManager = NodePath("../../GameManager")

[node name="Player" parent="Spawners" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.483065, 0.902338, 6.5 )
collision_layer = 2
script = ExtResource( 3 )
player_num = 1
GameManager = NodePath("../../GameManager")

[node name="InitCell" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.938, 0.892372, -4.24389 )
type = 0

[node name="Cells" type="Spatial" parent="."]

[node name="Cell1" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.938, 0.748041, -17.4472 )
type = 3

[node name="Cell2" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.938, 0.748041, -29.0634 )

[node name="Cell3" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8534, 0.748041, -26.9255 )

[node name="Cell4" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8534, 0.748041, -44.996 )

[node name="Cell5" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88274, 0.748041, -44.9482 )

[node name="Cell6" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88274, 0.748041, -56.9466 )

[node name="Cell7" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88274, 0.748041, -72.124 )

[node name="Cell8" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8009, 0.748041, -66.3415 )

[node name="End_Cell" parent="Cells" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.975, 0.90156, -54.3406 )
type = 2

[node name="GameManager" parent="." instance=ExtResource( 8 )]
cells = [ NodePath("../InitCell"), NodePath("../Cells/Cell1"), NodePath("../Cells/Cell2"), NodePath("../Cells/Cell3"), NodePath("../Cells/Cell4"), NodePath("../Cells/Cell5"), NodePath("../Cells/Cell6"), NodePath("../Cells/Cell7"), NodePath("../Cells/Cell8"), NodePath("../Cells/End_Cell") ]
players = [ NodePath("../Spawners/Player"), NodePath("../Spawners/Player2") ]

[node name="MinigamesLoader" parent="." instance=ExtResource( 21 )]
minigames = [ "res://Minigames/Example1.tscn" ]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.727378, 5.99875e-05, 0.686237, -0.686237, 6.35838e-05, 0.727378, 0, -1, 8.74151e-05, 18.2785, 13.6, -36.4709 )
light_energy = 2.25
directional_shadow_max_distance = 645.2

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0505058, 0.998724, 0, -0.998724, 0.0505058, 0, 34.0986, -36.4709 )
visible = false
spot_range = 368.9
spot_attenuation = 0.00781251
spot_angle = 97.8

[node name="9" parent="." instance=ExtResource( 7 )]
transform = Transform( -8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, -0.69345, 0.20117, -15.2392 )

[node name="building2" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.938919, 0.545608, -30.3935 )

[node name="shop" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00492477, 5.72205e-06, -44.2063 )

[node name="10" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.380592, 0, -56.6404 )

[node name="11" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.03152, -0.0541229, -72.0429 )

[connection signal="dice_used" from="CanvasLayer/Dado" to="GameManager" method="_on_Dado_dice_used"]
[connection signal="fade_out_finished" from="SceneTransitionAnim/Control" to="SceneLoader" method="load_scene"]
[connection signal="game_finished" from="Spawners/Player2" to="SceneTransitionAnim/Control" method="play_fade_out"]
[connection signal="load_minigame" from="Spawners/Player2" to="MinigamesLoader" method="_on_load_minigame"]
[connection signal="play_aguen" from="Spawners/Player2" to="CanvasLayer/Dado" method="SetCanLaunchDice" binds= [ true ]]
[connection signal="player_points_updated" from="Spawners/Player2" to="CanvasLayer/PlayerTurnHUD" method="_on_Player_player_points_updated" binds= [ 2 ]]
[connection signal="player_turn_ended" from="Spawners/Player2" to="GameManager" method="UpdatePlayersTurn"]
[connection signal="game_finished" from="Spawners/Player" to="SceneTransitionAnim/Control" method="play_fade_out"]
[connection signal="load_minigame" from="Spawners/Player" to="MinigamesLoader" method="_on_load_minigame"]
[connection signal="play_aguen" from="Spawners/Player" to="CanvasLayer/Dado" method="SetCanLaunchDice" binds= [ true ]]
[connection signal="player_points_updated" from="Spawners/Player" to="CanvasLayer/PlayerTurnHUD" method="_on_Player_player_points_updated" binds= [ 1 ]]
[connection signal="player_turn_ended" from="Spawners/Player" to="GameManager" method="UpdatePlayersTurn"]
[connection signal="body_entered" from="InitCell" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="InitCell" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell1" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell1" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell2" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell2" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell3" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell3" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell4" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell4" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell5" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell5" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell6" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell6" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell7" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell7" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell8" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/Cell8" to="Spawners/Player2" method="player_reached_target"]
[connection signal="body_entered" from="Cells/End_Cell" to="Spawners/Player" method="player_reached_target"]
[connection signal="body_entered" from="Cells/End_Cell" to="Spawners/Player2" method="player_reached_target"]
[connection signal="on_players_turn_changed" from="GameManager" to="CanvasLayer/PlayerTurnHUD" method="_on_GameManager_on_players_turn_changed"]

[editable path="CanvasLayer/PlayerTurnHUD"]
[editable path="SceneTransitionAnim"]
